CI: lock flake8 to .flake8 config to exclude venvs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Lint & type check
         run: |
-          flake8 .
+          flake8 --config .flake8 .
           black --check .
           isort --check-only .
           mypy .
