--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.inlayHints.padding": false
+    "editor.inlayHints.padding": false,
+    "python.analysis.typeEvaluation.enableExperimentalFeatures": true
 }
