--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
@@ -38,7 +39,8 @@ jobs:
 
       - name: Run tests with coverage
         run: pytest --cov=admin_gui --cov-report=term-missing
-        - name: Upload coverage HTML artifact
+
+      - name: Upload coverage HTML artifact
           uses: actions/upload-artifact@v4
           with:
             name: coverage-html
